Update and rename README.md to README

--- a/README
+++ b/README
@@ -15,4 +15,4 @@ Bugs und Ideen kannst du mir [hier](https://github.com/BitPhinix/Oberstufen-Modu
 * [Font Awesome 4.7.0](http://fontawesome.io/)
 
 # Lizenz
-Diese Projekt is unter der [MIT Lizenz](LICENSE.md)
+Diese Projekt is unter der [MIT Lizenz](LICENSE)
